fix: Text align to the left

--- a/assets/sass/layouts/defaults/_single.scss
+++ b/assets/sass/layouts/defaults/_single.scss
@@ -23,7 +23,7 @@ article.content {
 
 		p {
 			margin: 0.5rem;
-			text-align: justify;
+			text-align: left;
 			overflow-wrap: break-word;	
 			word-wrap: break-word;
 
